crates/cli/tests/snapshots/deprecated__fix_174dc0d1d9e78fd30b854475b82a991795814e0bfc6a3fc90f46e7370f2f63dc.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"builtins.toPath \\\"/some/path\\\"\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-builtins.toPath "/some/path"
+let __strictix_to_path_arg = builtins.toString "/some/path"; in if builtins.substring 0 1 __strictix_to_path_arg == "/" then /. + __strictix_to_path_arg else ./. + "/${__strictix_to_path_arg}"
