crates/cli/tests/snapshots/deprecated__fix_2591c40828b326620f16578eb5fea8586d9b78d9e002f1b3863ccacfbb323fac.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.dontRecurseIntoAttrs\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-pkgs.dontRecurseIntoAttrs
+pkgs.lib.dontRecurseIntoAttrs
