crates/cli/tests/snapshots/deprecated__fix_37da396188e345dbca902d84176af1a0362ba0e50ffc70133ff8b08141960505.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"mkAliasOptionModuleMD old new\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-mkAliasOptionModuleMD old new
+mkAliasOptionModule old new
