crates/cli/tests/snapshots/deprecated__fix_43eaba26445deeb39487f4c9485ea0e19acb5221335866624a98839589d8de8b.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.system\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-pkgs.system
+pkgs.stdenv.hostPlatform.system
