crates/cli/tests/snapshots/deprecated__fix_718da0ec8c3bbc8472e76289d6e2c9b36bb61bcb0c651b7d990f5add15726cac.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.lists.fold f z xs\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-lib.lists.fold f z xs
+lib.lists.foldr f z xs
