crates/cli/tests/snapshots/deprecated__fix_82a443e38ff0216f9c3149c5fbcec7859e9f5f0ca3cf78e6b518716157aced3a.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.mkFixStrictness (if cond then a else b)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-lib.mkFixStrictness (if cond then a else b)
+(if cond then a else b)
