crates/cli/tests/snapshots/deprecated__fix_9f17eb31877325b73b6b29e84ef242b4fe2e21a0ba18285833e1d05efe037b1a.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.hostPlatform\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-pkgs.hostPlatform
+pkgs.stdenv.hostPlatform
