crates/cli/tests/snapshots/deprecated__fix_aded4062a370627b05abe2aefc5ee40156adbc9936ef29b2208d11b58972f3d1.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.mkFixStrictness x\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-lib.mkFixStrictness x
+x
